@@ -85,6 +85,12 @@ NOTES:
 
 * CDAUDIO:  The cdrom driver (cdrom.sys, xcdrom.sys, etc.) must be
   loaded and mscdex 2.0 or compatible (such as shsucdx) must be running.
+  If you have more than one cdrom drives, use the -cddev command line
+  switch with a single drive letter as the argument, like:
+
+	h2dos -cddev e
+
+  Without the -cddev switch, the game will access the first cdrom drive.
   In order to disable cdaudio, use the command line argument -nocdaudio.
 
 * DEBUG LOG:  If something goes wrong, or if you are just curious, run
